# copter

./: CMakeLists.txt
cmake/: arm-none-eabi.cmake
src/: main.cpp
src/hal/: hal.hpp
src/hal/component/: component.hpp
src/hal/component/instrument/: accelerometer.hpp  instrument.hpp
src/hal/gpio/: pin.hpp
src/hal/task/: task.hpp
src/system/: comptime.hpp  startup.cpp  stm32f405.x
src/system/stm32/: gpio.hpp  regs.hpp
src/system/stm32/ld/: stm32f405.x
